# mcp-delegation-lab-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: README.md  check_transfer_eligibility.json  check_transfer_eligibility_schema.json  cli_transcript.md  demo.md  get_delegation_scope.json  get_delegation_scope_schema.json  initiate_transfer.json  initiate_transfer_schema.json
src/mcp_delegation_lab/: audit.py  errors.py  handlers.py  models.py  policy.py  server.py  store.py  tools.py
src/mcp_delegation_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_tools.py
