[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-delegation-lab"
version = "0.1.0"
description = "MCP proof-of-concept for delegation-scoped transfers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
